[package]
name = "zkp_auth_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.1"
rand = "0.8.5"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.1"

[build-dependencies]
tonic-build = "0.12.1"

# server
[[bin]]
name = "zkp_auth_server"
path = "src/server.rs"

# client
[[bin]]
name = "zkp_auth_client"
path = "src/client.rs"


